Fix bookmark not showing in Firefox

--- a/webapp/src/main/webapp/resources/custom.css
+++ b/webapp/src/main/webapp/resources/custom.css
@@ -15,6 +15,9 @@
 .w-10 {
     width: 10%;
 }
+.svg-bookmark {
+    width: 50px !important;
+}
 
 .card-body-home{
     flex:1 1 auto;
